--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -6,6 +6,8 @@ temple.url = https://temp-mail.org/en/view/68e516b061a5d700148e94e0
 
 
 
+//cards
+
 cardNomer = 4111 1111 1111 1111
 cardM = 12
 cardY = 25
