--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -16,7 +16,7 @@ cardCvc = 123
 cardUser = Nurbek Abialasan
 
 cardNumber = 8777 112 23 34
-
+cardEmail = tester@gmail.com
 
 //?????????????????????
 
@@ -24,5 +24,4 @@ cardNumber = 8777 112 23 34
 TestName = Tester
 TestLastName = Testerovich
 TestPhone = 77711122233
-TestGmail = tester@gmail.com
 
