first-test-cases: Test cases for buying stream

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -5,23 +5,39 @@ temple.url = https://temp-mail.org/en/view/68e516b061a5d700148e94e0
 
 
 
+//testlogandpar
+
+testlog = test
+testpass = S213#2Fd34@3!
+
 
 //cards
 
 cardNomer = 4111 1111 1111 1111
 cardM = 12
-cardY = 25
+cardY = 26
 
 cardCvc = 123
 cardUser = Nurbek Abialasan
 
-cardNumber = 8777 112 23 34
-cardEmail = tester@gmail.com
 
 //?????????????????????
 
 
 TestName = Tester
 TestLastName = Testerovich
-TestPhone = 7772223344
+TestPhone = 7772223307
+
+test_instagram = nur
+school = ??????
+
+
+//registrationINFO
+
+TestIIN = 050313500211
+TestFath = Testeruly
+TestParentNumber = 777 112 2335
+TestParentEmail = tester@gmail.com
+
+
 
